# song-stitch

./: .dockerignore  .env.example  .gitignore  .prettierignore  .typos.toml  Cargo.toml  Dockerfile  Dockerfile.rust  Dockerfile.template  Makefile  PRIVACY.md  README.md  TERMS.md  docker-compose.yml  fly.dev.toml  fly.toml  go.mod  go.sum
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
cmd/: album.go  api.go  artist.go  download.go  image.go  lastfm.go  main.go  models.go  track.go
internal/api/: api.go  parse.go  parse_test.go  validators.go
internal/cache/: cache.go
internal/clients/: interfaces.go  lastfm.go  models.go
internal/clients/lastfm/: constants.go  interfaces.go  (+2 more)
internal/collages/: album.go  artist.go  element.go  generator.go  track.go
internal/colors/: classification.go
internal/config/: config.go
internal/constants/: constants.go  errors.go
internal/generator/: download.go  image.go  interfaces.go
internal/models/: album.go  track.go
internal/server/: server.go
internal/session/: constants.go  errors.go
public/: index.html  scripts.js  style.css  support.html
public/scripts/: scripts.js
public/style/: style.css
scripts/: hashfiles.sh
src/: constants.rs  image.rs  lastfm.rs  main.rs
tests/: endpoint_test.go
ui/: .prettierignore  .prettierrc.cjs  index.html  main.js  package-lock.json  package.json  shared.js  styles.css  support.html  support.js  svelte.config.js  vite.config.ts
ui/public/: humans.txt
ui/src/: App.svelte  Support.svelte  app.css  support.ts
(+12 files in other folders)
