[package]
name = "song-stitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
futures = "0.3.28"
image = { version = "0.24.7", features = ["webp-encoder"] }
imageproc = "0.23.0"
miette = "5.10.0"
once_cell = "1.18.0"
openssl = { version = "0.10.56", features = ["vendored"] }
reqwest = { version = "0.11.20", features = ["json"] }
rusttype = "0.9.3"
serde = { version = "1.0.187", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = ["fs"] }
